# opencv-cmake

./: CMakeLists.txt  README
cmake/: .safeguards.cmake.swp  CMakeLists.txt  README  safeguards.cmake.save
doc/: CMakeLists.txt  README
lib/: CMakeLists.txt  constants.h
lib/body/: CMakeLists.txt  README  grabber.cpp  window.cpp
lib/head/: CMakeLists.txt  README  grabber.hpp  window.hpp
lib/test/: CMakeLists.txt  README  window-test.cpp
resource/: CMakeLists.txt  README
resource/image/: CMakeLists.txt
src/: CMakeLists.txt  README
src/back-end/: CMakeLists.txt  README
src/front-end/: CMakeLists.txt  README
temp/: CMakeLists.txt  README
